# pm_atm

./: .gitignore  README.md  pyproject.toml
config/: alerts.prod.example.json  engine.prod.conservative.json  engine.prod.standard.json  risk.prod.conservative.json  risk.prod.standard.json  strategy.premarket_no.default.json  strategy.prod.conservative.json  strategy.prod.standard.json  weather_events.example.json
docs/: PROD_GO_LIVE_CHECKLIST.md  REAL_TRADING_DESIGN_AND_PLAN.md  REAL_TRADING_RUNBOOK.md
outputs/: live_review_ws_all_30m_enriched.md  market_pnl_ranking_ws_all_30m_enriched.csv
scripts/: enrich_market_report.py  generate_weather_config.py  install_weather_scan_cron.sh  live_health_report.py  manage_polymarket_account.py  preflight_live.py  run_backtest.py  run_live_paper.py  run_live_prod.sh  scan_all_weather_markets.py  smoke_interfaces.py  smoke_real_order.py
src/weather_arb/: __init__.py  engine.py  event_mapping.py  exchange_sim.py  execution.py  execution_service.py  live.py  market_classifier.py  model_ensemble.py  order_store.py  orders.py  polymarket.py  polymarket_account.py  polymarket_direct_trader.py  polymarket_executor.py  polymarket_sdk_executor.py  polymarket_utils.py  realtime.py  risk.py  strategy.py  strategy_base.py  strategy_premarket_no.py  trade_history.py  validation.py  weather_provider.py
tests/unit/: test_engine_smoke.py  test_engine_strategy_override.py  test_event_mapping.py  test_execution_risk.py  test_live_runner.py  test_market_classifier.py  test_order_store_and_execution.py  test_polymarket_account_manager.py  (+7 more)
