[project]
name = "weather-mispricing-arb"
version = "0.1.0"
description = "Research toolkit for weather forecast mispricing arbitrage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.2.0",
  "pandas>=2.2.0",
  "requests>=2.32.0",
  "websockets>=15.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_arb"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
